; ModuleID = '/home/carl/AnghaBench/freebsd/tests/sys/netmap/extr_ctrl-api-test.c_port_register_single_host_pair.c'
source_filename = "/home/carl/AnghaBench/freebsd/tests/sys/netmap/extr_ctrl-api-test.c_port_register_single_host_pair.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TestContext = type { i32, i32, i32, i32 }

@NR_REG_ONE_SW = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TestContext*)* @port_register_single_host_pair to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @port_register_single_host_pair(%struct.TestContext* %0) #0 {
  %2 = alloca %struct.TestContext*, align 8
  store %struct.TestContext* %0, %struct.TestContext** %2, align 8
  %3 = load i32, i32* @NR_REG_ONE_SW, align 4
  %4 = load %struct.TestContext*, %struct.TestContext** %2, align 8
  %5 = getelementptr inbounds %struct.TestContext, %struct.TestContext* %4, i32 0, i32 3
  store i32 %3, i32* %5, align 4
  %6 = load %struct.TestContext*, %struct.TestContext** %2, align 8
  %7 = getelementptr inbounds %struct.TestContext, %struct.TestContext* %6, i32 0, i32 0
  store i32 2, i32* %7, align 4
  %8 = load %struct.TestContext*, %struct.TestContext** %2, align 8
  %9 = getelementptr inbounds %struct.TestContext, %struct.TestContext* %8, i32 0, i32 1
  store i32 2, i32* %9, align 4
  %10 = load %struct.TestContext*, %struct.TestContext** %2, align 8
  %11 = getelementptr inbounds %struct.TestContext, %struct.TestContext* %10, i32 0, i32 2
  store i32 1, i32* %11, align 4
  %12 = load %struct.TestContext*, %struct.TestContext** %2, align 8
  %13 = call i32 @port_register(%struct.TestContext* %12)
  ret i32 %13
}

declare dso_local i32 @port_register(%struct.TestContext*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
